--- a/roles/kubernetes/base/tasks/main.yaml
+++ b/roles/kubernetes/base/tasks/main.yaml
@@ -1,4 +1,11 @@
 ---
+- name: "Firewall exception for the kubernetes apiserver"
+  firewalld:
+    port: 6443/tcp
+    immediate: yes
+    permanent: yes
+    state: enabled
+
 - name: Download kubernetes binaries
   get_url:
     url: "https://storage.googleapis.com/kubernetes-release/release/{{ kubernetes.versions.kubernetes }}/bin/linux/amd64/{{ item }}"
